[tool.poetry]
name = "mech-api"
version = "0.1.0"
description = ""
authors = ["Dustin Mendoza <penguindustin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask-restplus = "^0.13.0"
Werkzeug = "0.16.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
